<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".feature.accountDetails.AccountDetailsActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp">

        <ImageView
            android:id="@+id/profile_photo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:background="@color/light_pink"/>

        <RelativeLayout
            android:id="@+id/goBackSet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <ImageButton
                android:id="@+id/goBackButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:backgroundTint="#00FFFFFF"
                android:src="@drawable/ic_back_icon"
                 />

            <TextView
                android:id="@+id/goBackText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/goBack"
                android:textAllCaps="true"
                android:textColor="@color/white" />

        </RelativeLayout>

        <TextView
            android:id="@+id/repo_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="120dp"
            android:alpha="0.6"
            android:text="@string/repo_author"
            android:textAllCaps="true"
            android:textColor="@color/window_color"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/author_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/repo_by"
            android:layout_marginStart="16dp"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/star_parameters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/author_name"
            android:layout_marginStart="20dp">

            <TextView
                android:id="@+id/stars_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/star_number"
                android:layout_marginStart="20dp"
                android:alpha="0.6"
                android:textColor="@color/window_color"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/star_icon2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:alpha="0.8"
                android:src="@drawable/ic_star_icon2"
                />

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/repo_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:textSize="17sp"
            android:layout_centerVertical="true"
            android:text="@string/welcome"
            tools:ignore="RelativeOverlap" />

        <Button
            android:id="@+id/online_view"
            android:layout_width="118dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/view_online_button"
            android:text="@string/view_online"
            android:textColor="@color/blue" />

    </RelativeLayout>

</LinearLayout>